--- a/css/webflow.css
+++ b/css/webflow.css
@@ -414,6 +414,7 @@ textarea.w-select {
 }
 .w-row:before,
 .w-row:after {
+  content: " ";
   display: table;
 }
 .w-row:after {
